@@ -6,6 +6,7 @@ pwdx: new command -- thanks Nicholas Miell
 ps: more room for some columns
 watch: passes COLUMNS and LINES in environment
 top: in batch mode, tolerate unknown $TERM -- thanks Daniel Walsh
+pkill: quiet about processes that die before kill()
 
 procps-3.2.2 --> procps-3.2.3
 
